fixed: Audio file missing due to url duplication, removed letter spacing in links, changed chinese translation wording, faq content addition.

--- a/themes/anatole/source/css/style.css
+++ b/themes/anatole/source/css/style.css
@@ -217,7 +217,6 @@ display:none }
     margin: 0; }
   .post .post-title a {
     text-decoration: none;
-    letter-spacing: 1px;
     color: #5f5f5f; }
     .post .post-title a:hover {
       text-decoration: underline; }
